Changes for IntelliDateTime
===========================

unreleased
----------

- widget now displays time input only if ``show_hm`` is set to ``True``
  (as does CalendarWidget)
  [2008/07/28 fRiSi]